--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>SatzzDev</title>
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/x-icon" href="./favicon.ico">
 <meta name="description" content="SatzzDev - Full Stack Developer | Open Source Enthusiast">
 <meta name="keywords" content="web developer, javascript, node.js, open source">
 <meta name="author" content="SatzzDev">
@@ -203,7 +203,7 @@ clip-rule="evenodd"></path>
 <a href="whatsapp://send/?phone=6281268248904&text=.menu&type=phone_number&app_absent=0&wame_ctl=1" class="mt-4 inline-block bg-purple-600 text-white py-2 px-6 rounded-lg">Try It</a>
 </div>
 <div class="swiper-slide bg-white dark:bg-gray-800 p-4 rounded-lg">
-<img loading="lazy" src="Screenshot 2025-03-09 151005.png" alt="Project Image" class="w-32 h-32 mx-auto rounded-md mb-4">
+<img loading="lazy" src="./assets/Screenshot 2025-03-09 151005.png" alt="Project Image" class="w-32 h-32 mx-auto rounded-md mb-4">
 <h3 class="text-xl font-semibold text-gray-800 dark:text-gray-200">Jadwal Sholat</h3>
 <p class="text-gray-600 dark:text-gray-400">A web-based prayer time application that provides accurate schedules for daily prayers based on location, using reliable API sources.</p>
 <a href="https://kurniawansatria.github.io/JadwalSholat" target="_blank" class="mt-4 inline-block bg-purple-600 text-white py-2 px-6 rounded-lg mb-8">Try It</a>
